2009-05-04  Esteban Sánchez  <estebans@artica.es>

	* include/functions_agents.php: Added create_agent(), 
	
	* include/functions_db.php: Renamed dame_agente_id() to get_agent_id ().
	Added process_sql_begin(), process_sql_rollback() and process_sql_commit()
	and use MySQL functions directly because the Pandora cache was avoiding
	more than one execution.

	* include/functions_incidents.php, include/functions_messages.php,
	godmode/agentes/massive_delete_agents.php,
	godmode/agentes/massive_delete_alerts.php,
	godmode/agentes/massive_delete_modules.php,
	godmode/agentes/massive_edit_modules.php,
	godmode/db/db_purge.php,
	include/functions_events.php: Use new transaction functions.
	
	* include/functions_modules.php: Sanitize some values. Added
	create_agent_module_from_network_component(), create_agent_module()
	and get_network_component().
	
	* godmode/agentes/configurar_agente.php: Use get_agent_id() and transaction
	functions.
	
	* reporting/fgraph.php, operation/reporting/reporting_viewer.php: Use
	get_agent_id(). 
	
	* godmode/setup/file_manager.php: Removed unnecesary variable.
	
	* operation/agentes/ver_agente.php: Replaced exit with return on ajax
	operation.
	
	* include/config_process.php: Updated build number.
	
	* include/functions_network_profiles.php: Fixed documentation.

2009-05-02  Sancho Lerena <slerena@artica.es>

	* extensions/dbmanager.php: Fixed problems with quotes.

	* operation/agentes/status_monitor.php: Used module_interval insted deprecated
	tagente_estado.current_interval.

	* operation/agentes/estado_grupo.php: Same as above.

	* operation/agentes/estado_monitores.php: same as above.

	* godmode/agentes/module_manager.php: Uses new server_type field instead old
	server fields.

	* godmode/agentes/configurar_agente.php: Added tab in godmode/edit agent
	to go to a filtered list view per groups from the agent edit view.

2009-05-01  Sancho Lerena  <slerena@artica.es>
