@@ -2,28 +2,28 @@
 	Plain old table styles
 	written by Chris Heilmann http://wait-till-i.com
 */
-table.dbmanager,td.dbmanager,th.dbmanager{
+table.dbmanager, table.dbmanager td, table.dbmanager th {
 	border:1px solid #888;
-	border-collapse:collapse;
-	margin:0;
-	padding:0;
+	border-collapse: collapse;
+	margin: 0;
+	padding: 0;
 }
-td.dbmanager,th.dbmanager{
+
+table.dbmanager td, table.dbmanager th {
 	padding:.2em .5em;
-	vertical-align:top;
-	font-weight:normal;
-        background:#fafafa;
-        color:#000;
+	vertical-align: top;
+	font-weight: normal;
+	background: #fafafa;
+	color: #000;
 	font-size: 9px;
 }
 
-th.dbmanager {
+table.dbmanager th {
 	color: #fff;
 	text-transform: uppercase;
 	font-size: 8px;
 	background: #888;
 }
-
 
 textarea.dbmanager {
 	min-height: 50px;
